public/css/style.css
/** CAROUSEL **/

#carousel {
    margin-bottom: 20px;
}

.carousel-static-image {
    position: absolute;
    top:0;
    left:0;
    width: 100%;
    min-height: 100%;
    z-index: -1;
}

.lego-image {
    width: 250px;
}


/** TYPED AREA **//
h2 {
    font-weight: 300;
}

.verb-title {
    font-size: 40px;
    font-weight: 300;
}

.verb {
    border-bottom:3px dotted #ccc; 
}

.question, .make, .invent, .code, .design{
    font-weight: bold;
}

.question {
    color: #f05a28;
}

.make{
    color: #7546b2;
}

.invent {
    color: #2cb5e5;
}

.code {
    color: #39b54a;
}

.design {
    color: #ef4136;
}


/** CATEGORY LINKS **/

#category-links {
    margin-top: 30px;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 14px;
    margin-bottom: 50px;
}

.project-category{
    color: #bbb;
    padding-bottom: 10px;
    border-bottom: 3px solid transparent;
}

.project-category:hover, .project-category:focus{
    text-decoration: none;
    color: #999;
    outline: none;
}

.active {
    color: #999;
}

.all-link:hover, .all-link:focus,  .all-link.active{
    border-color: #f05a28;
}

.make-link:hover, .make-link:focus, .make-link.active{
    border-color: #7546b2;
}

.code-link:hover, .code-link:focus, .code-link.active{
    border-color: #39b54a;
}

.design-link:hover, .design-link:focus, .design-link.active {
    border-color: #ef4136;
}

.play-link:hover, .play-link:focus, .play-link.active {
    border-color: #2cb5e5;
}

/** PROJECT LIST **/

#project-list {
    text-align: center;
}

.is-loading {
    height: 250px;
    width: 300px;
    background-color: #eee;
    background-position: center center;
    background-repeat: no-repeat;
    background-image: url('../img/loader.gif');
    background-size: 40px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    border: 1px solid #ccc;
}

.loading-failed {
    height: 250px;
    width: 300px;
    background-color: #eee;
    background-position: center center;
    background-repeat: no-repeat;
    background-image: url('../img/loading-failed.png');
    background-size: 32px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    border: 1px solid #ccc;
}

.project-item-image {
    border: 1px solid #ccc;
}

.project-item-title {
    margin: 0;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 12px;
    margin-top: 10px;
    margin-bottom: 20px;
    color:#aaa;
}

.ellipsis{
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* PROJECT DETAIL */

#project-detail {
    border-top: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    padding: 30px 0;
    position: relative;
    margin-bottom: 20px;
}

#project-detail img, iframe{
    border:1px solid #ccc;
}

.responsive-iframe {
    position: relative;
    height: 0;
    overflow: hidden;
    max-width: 600px;
    display: block;
    margin: 0 auto;
    padding-bottom: 56.25%;
}

.responsive-iframe-16x9 {
    padding-bottom: 56.25%;
}

.responsive-iframe-4x3{
    padding-bottom: 75%;
}

.responsive-iframe iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;

}

/*iframe {
    margin: 0 auto;
    display: block;
    width:100%;
    max-width: 600px;
    height: 500px;
}*/

.project-detail-close {
    color: #999;
    font-weight: 200;
    font-size: 40px;
    position: absolute;
    right: 20px;
    top:5px;
    z-index: 5;
}

.project-detail-close:hover, .project-detail-close:focus {
    color: #666;
    text-decoration: none;
}

.project-detail-container {
    text-align: left;
    padding-left: 60px;
}

.project-detail-title{
    font-weight: 300;
    font-size: 42px;
}

.project-detail-description{
    font-size: 16px;
    margin-bottom: 20px;
}

.project-detail-link{
    font-size: 16px;
    color: #ef4136;
}

.project-detail-link:hover{
    text-decoration: none;
    color: #d73a30;
}

.project-detail-subheader {
    font-weight: 300;
    color: #999;
    margin-bottom: 20px;
}

.project-detail-subheader:after {
    content: '';
    width: 40px;
    display: block;
    height: 1px;
    border-bottom: 2px solid #ef4136;
    text-align: left;
    margin:10px 0;
}

.strikethrough {
    color:#ef4136;
    font-size: 16px;
    text-decoration:line-through;
}

.project-detail-role li{
    background: #eee;
    padding: 5px 10px;
    border-radius: 50px;
    border:1px solid #ddd;
    color: #999;
    margin-bottom: 5px;
    text-transform: capitalize;
}

.carousel-control.left, .carousel-control.right {
    background-image: none;
    background-repeat: none;
}

.carousel-control {
    top: 0;
    font-weight: 300;
    font-size: 70px;
    color: white;
    opacity: 0.8;
    text-shadow: 0 0 3px black;
}

.carousel-arrow {
    position: absolute;
    top: 40%;
}

.carousel-arrow.prev{
    left:25px;
}

.carousel-arrow.next {
    right: 25px;
}

.carousel-control:hover, .carousel-control:focus {
    color: white;
}

/** CONTACT **/

#contact {
    background: #f5f7f9;
    border-top: 1px solid #ddd;
    padding-top: 50px;
    padding-bottom: 70px;
    margin-top: 60px;
}

.say-hi{
    margin: 0;
    font-size: 42px;
    font-weight: 300;
}

.my-email {
    margin: 0;
    margin-top: 20px;
    font-size: 30px;
}

.my-email a{
    color: #ef4136;
    text-decoration: underline;
}

.my-email a:hover{
    color: #d73a30;
}

/* FOOTER */

#footer {
    background: #333;
    padding-top: 10px;
    padding-bottom: 5px;
    border-top: 1px solid #000;
}

#footer p {
    color: #aaa;
    font-weight: 300;
    font-size: 11px;
}

/* TYPED JS ANIMATED CURSOR */

.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

/** MEDIA QUERIES **/

@media(max-width: 992px){
    .project-detail-container {
        text-align: center;
        padding-left: 0;
    }

    .project-detail-subheader:after{
        text-align: center;
        margin: 10px auto 0;

    }
}

@media (max-width: 768px){
    .lego-image {
        width: 200px;
    }

    .carousel-arrow {
        top: 35%;
    }

    
}

